--- a/core/templates/recomendacoes.html
+++ b/core/templates/recomendacoes.html
@@ -1,10 +1,25 @@
 {% extends 'base.html' %}
 {% block title %}Suas recomendações{% endblock %}
-
 {% block content %}
 <h2>🎬 Recomendações personalizadas</h2>
-<div class="fade-in">
-    {{ recomendacoes|safe }}
+
+{% for filme in recomendacoes %}
+<div class="card my-3 shadow-sm" style="max-width:600px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="{{ filme.poster }}" class="img-fluid rounded-start" alt="{{ filme.titulo }}">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">{{ filme.titulo }} ({{ filme.ano }})</h5>
+        <p class="card-text">{{ filme.sinopse }}</p>
+        <a href="{{ filme.link }}" target="_blank" class="btn btn-outline-primary btn-sm">Ver no IMDb</a>
+        <a href="{% url 'marcar_assistido' filme.titulo %}" class="btn btn-outline-success btn-sm">Marcar como assistido</a>
+      </div>
+    </div>
+  </div>
 </div>
-<a href="{% url 'persona' %}" class="btn btn-outline-secondary mt-3">Fazer novamente</a>
+{% endfor %}
+
+<a href="{% url 'persona' %}" class="btn btn-secondary mt-3">Gerar novamente</a>
 {% endblock %}
