--- a/core/templates/persona_form.html
+++ b/core/templates/persona_form.html
@@ -2,7 +2,7 @@
 {% block title %}Descubra seu estilo de filmes{% endblock %}
 
 {% block content %}
-<h2>🎭 Descubra sua persona de filmes</h2>
+<h2>Descubra sua persona de filmes</h2>
 <p>Responda algumas perguntas rápidas e veja recomendações personalizadas.</p>
 <form method="post">
     {% csrf_token %}
