--- a/core/templates/recomendacoes.html
+++ b/core/templates/recomendacoes.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Suas recomendações{% endblock %}
 {% block content %}
-<h2>🎬 Recomendações personalizadas</h2>
+<h2>Recomendações personalizadas</h2>
 
 {% for filme in recomendacoes %}
 <div class="card my-3 shadow-sm" style="max-width:600px;">
