--- a/core/templates/recomendacoes.html
+++ b/core/templates/recomendacoes.html
@@ -3,23 +3,26 @@
 {% block content %}
 <h2>Recomendações personalizadas</h2>
 
-{% for filme in recomendacoes %}
-<div class="card my-3 shadow-sm" style="max-width:600px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="{{ filme.poster }}" class="img-fluid rounded-start" alt="{{ filme.titulo }}">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
+<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+  {% for filme in recomendacoes %}
+  <div class="col">
+    <div class="card h-100 shadow-sm">
+      <img src="{{ filme.poster }}" class="card-img-top" alt="{{ filme.titulo }}">
+
+      <div class="card-body d-flex flex-column">
         <h5 class="card-title">{{ filme.titulo }} ({{ filme.ano }})</h5>
-        <p class="card-text">{{ filme.sinopse }}</p>
-        <a href="{{ filme.link }}" target="_blank" class="btn btn-outline-primary btn-sm">Ver no IMDb</a>
-        <a href="{% url 'marcar_assistido' filme.titulo %}" class="btn btn-outline-success btn-sm">Marcar como assistido</a>
+        <p class="card-text flex-grow-1">{{ filme.sinopse }}</p>
+        
+
+        <div class="mt-2">
+          <a href="{{ filme.link }}" target="_blank" class="btn btn-outline-primary btn-sm">Ver no IMDb</a>
+          <a href="{% url 'marcar_assistido' filme.titulo %}" class="btn btn-outline-success btn-sm">Marcar como assistido</a>
+        </div>
       </div>
     </div>
   </div>
+  {% endfor %}
 </div>
-{% endfor %}
 
 <a href="{% url 'persona' %}" class="btn btn-secondary mt-3">Gerar novamente</a>
 {% endblock %}
